# crisalid-ai-skills

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: cd_push_dev_main.yml  ci_pull_request.yml
mcp-toolbox/: .env.sample  .env.test  Dockerfile  entrypoint.sh  tools-auth.yaml  tools-sorbobot.yaml  tools.yaml
samples/: .env.sample  load_restricted_toolset.py  load_restricted_toolset_authenticated.py  load_unrestricted_toolset.py  run_langchain_agent_with_mcp.py
tests/: conftest.py  test_mcp_toolbox_collaborator_tools.py  test_mcp_toolbox_concept_tools.py  test_mcp_toolbox_count_members_with_identifier.py  test_mcp_toolbox_cypher_tool.py  test_mcp_toolbox_location_tools.py  test_mcp_toolbox_membership_tools.py  test_mcp_toolbox_organization_search_tools.py  test_mcp_toolbox_organization_unit_members.py  test_mcp_toolbox_person_tools.py  test_mcp_toolbox_researcher_search_tools.py  test_mcp_toolbox_schema_tool.py  test_mcp_toolbox_semantic_search_tools.py  test_mcp_toolbox_toolsets.py  test_sorbobot_get_domain_authors.py  test_sorbobot_get_parent_domains.py  test_sorbobot_get_person_expertise.py  test_sorbobot_integration.py  test_sorbobot_search_domains.py
tests/fixtures/: graph.cypher
