[project]
name = "crisalid-ai-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "toolbox-langchain>=1.0.0",
    "toolbox-core @ git+https://github.com/googleapis/mcp-toolbox-sdk-python.git#subdirectory=packages/toolbox-core",
]

[dependency-groups]
dev = [
    "neo4j>=6.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
